--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </div>
     <!-- <script src="./merge-script.js"></script> -->
     <!-- <script src="./script.js"></script> -->
-    <script src="./scriptDE.js"></script>
+    <script src="./de_script.js"></script>
   </body>
 </html>
